# NaiLongKiller

./: .gitignore  CMakeLists.txt  LICENSE  NLKiller.cpp  NLKiller.hpp  README.md  gui.cpp  gui.hpp  main.cpp  ytensor.hpp
models/: NLK-s_simplified.onnx  helicopter_simplified.onnx  yvgg_simplified.onnx
windows/: NLKiller.cpp  NLKiller.hpp  Nlk.qrc  Nlk.ui  gui.cpp  gui.hpp  main.cpp  windows.sln  windows.vcxproj  windows.vcxproj.filters  ytensor.hpp
windows/webapi/: README.md  config.txt  main.cpp  test_client.py  webapi.cpp  webapi.hpp  webapi.vcxproj  webapi.vcxproj.filters
windows/webapi/models/: yvgg_simplified.onnx
